<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid3"
            android:layout_marginBottom="@dimen/grid3"
            android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/photoIV"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_width"
            android:layout_marginBottom="@dimen/grid2"
            android:src="@drawable/default_user"/>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/grid2"
            android:layout_below="@id/photoIV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uusernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="@dimen/standard_width"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/grid2"
            android:layout_below="@id/usernameTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eemailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/applyButton"
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            android:layout_below="@id/emailTIL"
            android:layout_marginBottom="@dimen/grid2"
            android:onClick="onApply"
            android:text="@string/button_apply"
            style="@style/StandardButton"/>

        <Button
            android:layout_width="@dimen/standard_width"
            android:layout_height="@dimen/standard_height"
            android:layout_below="@id/applyButton"
            android:layout_marginBottom="@dimen/grid2"
            android:onClick="onSignout"
            android:text="@string/button_signout"
            style="@style/StandardButton"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/profileProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="5dp"
        android:visibility="gone"
        android:background="@color/transparent_grey">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>